# circles_renderer

./: CMakeLists.txt  Circle.h  CircleSoA.h  CircleSoAUtils.cpp  CircleSoAUtils.h  CircleSoAUtilsParallel.cpp  CircleSoAUtilsParallel.h  CircleUtils.cpp  CircleUtils.h  CircleUtilsParallel.cpp  CircleUtilsParallel.h  Utils.h  main.cpp
results/: results_parallel.csv  results_sequential.csv
